Update and rename alexander.html to index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link rel="stylesheet" href="alexander.css">
+<link rel="stylesheet" href="style.css">
 <strong>This website will demonstrate the rise of one of the greatest military commanders in history Alexander of Macedonia and how he forged an empire from Greece to the far end of Asia. Created by Aadam hmaidi.</strong>
 <h1>King philip of Macedonia</h1>
 <p>In Ancient Greece there were two powerful cities economically politically and military. Athens a city where Democracy was born. And Sparta known for its militaristic way of life. Sparta and Athens got in a war called the peloponnesian war Athens as the Delian league and sparta as the peloponnesian league. Both sides took no notice of a city called Macedonia that would become a military power.</p>
